--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head> 
   <body>
     <h1>Hello World -- This is my website!</h1>
-    <p>I'm making this to host my portfolio for free.</p><iframe src="https://player.vimeo.com/video/234374753" width="640" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-
+    <p>I'm making this to host my portfolio for free.To learn more, read my <a href="statement.html">artist's
   </body>
 </html>
