--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head> 
   <body>
     <h1>Hello World -- This is my website!</h1>
-    <p>I'm making this to host my portfolio for free.To learn more, read my <a href="statement.html">artist's
+    <p>I'm making this to host my portfolio for free.To learn more, read my <a href="statement.html">artist's statement
   </body>
 </html>
