--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       
  <iframe src="https://player.vimeo.com/video/235283625" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
  <iframe src="https://player.vimeo.com/video/235283358" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
-     This is my first project with the idea of openning the door to and see what'd happen if you open it. Open the door, then you will see things happen to me when I get stressed with listed intense scences, strong colors used to kind of describe how stressed I am.
+     This is my first project with the idea of openning the door and see what'd happen if you open it.  You will see things happen to me when I get stressed with a list of intense scences, strong colors are used to kind of describe how stressed I am.
   </body>
 </html>
