--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>I'm making this to host my portfolio for free.To learn more, read my <a href="statement.html">artist's statement
       
 <p> <iframe src="https://player.vimeo.com/video/235283625" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <iframe src="https://player.vimeo.com/video/235283358" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </p> 
-    <p> This is my first project with the idea of openning the door and see what'd happen if you open it.  You will see things happen to me when I get stressed with a list of intense scences, strong colors are used to kind of describe how stressed I am. </p>
+    <p> This is my first project. I want to bring up the idea of things happen when I get stressed. Openning the door with a list of intense scenes by emphasizing strong colors help to describe how stressed I am. </p>
   </body>
 </html>
