--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>I'm making this to host my portfolio for free.To learn more, read my <a href="statement.html">artist's statement
       
 <p> <iframe src="https://player.vimeo.com/video/235283625" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <iframe src="https://player.vimeo.com/video/235283358" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </p> 
-    <p> This is my first project. I want to bring up the idea of things happen when I get stressed. Openning the door with a list of intense scenes by emphasizing strong colors help to describe how stressed I am. </p>
+    <p> The topic for my video is about stress. Under stress conditions, we all want to release our emotions in various ways. For example, there is a scene in a video, which is about the rocks were being dropped to a glass of water. The glass represents our body and mind, while the rocks are the stressors. One rock would not cause any different, however, if we hold all of the rocks together, our mind would be explode at one point.  The scene of a broken glass was shown in order to illustrate this idea. Furthermore, while under stress, we always look at everything in depressing ways. For instance, many scenes in the video explain this idea, such as scratching the paper, depressing guitar sound, etc. Also, intense music and bright color backgrounds were utilized to enhance the negative emotions of the audiences. </p>
   </body>
 </html>
