change Vinh to Lien

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="Vinh/index.html">
+    <a href="Lien/index.html">
       <img src="gif2.gif" alt="gif2" width="200" height="200">
     </a>
 
