--- a/Vinh/Justin BieberVideo.html
+++ b/Vinh/Justin BieberVideo.html
@@ -4,7 +4,7 @@
 
 
 <video width="1199" height="700" autoplay>
-<source src="JustinBieber7secVideo.mp4" type="video/mp4">
+<source src="assets/JustinBieber7secVideo.mp4" type="video/mp4">
 
 </video>
 
