--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="img_forest.jpg">
+    <a href="Vinh/index.html">
       <img src="gif3.gif" alt="gif3" width="600" height="400">
     </a>
   </div>
