--- a/Vinh/index.html
+++ b/Vinh/index.html
@@ -5,7 +5,7 @@
 <center><h1 style="color:Azure;">Guess #Vinh's World</h1></center>
 
 <a href="Ed SheeranVideo.html">
-<img src="ed_sheeran.jpg" alt="Ed Sheeran" style="width:400px;height:130px;">
+<img src="assets/ed_sheeran.jpg" alt="Ed Sheeran" style="width:400px;height:130px;">
 </a>
 
 <a href="Shayne WardVideo.html">
