--- a/Lien/index.html
+++ b/Lien/index.html
@@ -7,19 +7,19 @@
 </a>
 
 <a href="wrong2.html">
-  <img src="Green.jpg" alt="Green" style="width:200px;height:300px;border:0;">
+  <img src="assets/Green.jpg" alt="Green" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Correct1.html">
-  <img src="Black.jpg" alt="Black" style="width:200px;height:300px;border:0;">
+  <img src="assets/Black.jpg" alt="Black" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong.html">
-  <img src="Dorito.png" alt="Original" style="width:300px;height:300px;border:0;">
+  <img src="assets/Dorito.png" alt="Original" style="width:300px;height:300px;border:0;">
 </a>
 
 <a href="Wrong3.html">
-  <img src="Red.jpg" alt="Red" style="width:200px;height:300px;border:0;">
+  <img src="assets/Red.jpg" alt="Red" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong4.html">
