add assets/ to lien

--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -5,7 +5,7 @@
 
 <p>Click on any bags of Doritos to go to a new page and read more abot the topic:</p>
 
-<img src="doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
+<img src="assets/doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
 
 <map name="workmap">
   <area shape="rect" coords="156,132,85,197" alt="Sun" href="blue.html">
