--- a/Lien/Correct.html
+++ b/Lien/Correct.html
@@ -4,7 +4,7 @@
 
 <p>The GIF standard allows moving images.</p>
 
-  <img src="Snack.gif" alt="Snack"
+  <img src="assets/Snack.gif" alt="Snack"
   style="width:1000px;height:1000px;border:0;">
 </a>
 
