--- a/Lien/Correct1.html
+++ b/Lien/Correct1.html
@@ -6,59 +6,59 @@
 <a href="Correct.html">
 
 <video width="320" height="240" autoplay>
-  <source src="Clap.mp4" type="video/mp4">
-  <source src="Clap.ogg" type="video/ogg">
+  <source src="assets/Clap.mp4" type="video/mp4">
+  <source src="assets/Clap.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
   <a href="Bonus.html">
     <video width="320" height="240" autoplay>
-      <source src="Clap.mp4" type="video/mp4">
-      <source src="Clap.ogg" type="video/ogg">
+      <source src="assets/Clap.mp4" type="video/mp4">
+      <source src="assets/Clap.ogg" type="video/ogg">
       Your browser does not support the video tag.
     </video>
 
     <a href="Bonus.html">
       <video width="320" height="240" autoplay>
-        <source src="Clap.mp4" type="video/mp4">
-        <source src="Clap.ogg" type="video/ogg">
+        <source src="assets/Clap.mp4" type="video/mp4">
+        <source src="assets/Clap.ogg" type="video/ogg">
         Your browser does not support the video tag.
       </video>
 
       <a href="Bonus.html">
         <video width="320" height="240" autoplay>
-          <source src="Clap.mp4" type="video/mp4">
-          <source src="Clap.ogg" type="video/ogg">
+          <source src="assets/Clap.mp4" type="video/mp4">
+          <source src="assets/Clap.ogg" type="video/ogg">
           Your browser does not support the video tag.
         </video>
 
         <a href="Bonus.html">
           <video width="320" height="240" autoplay>
-            <source src="Clap.mp4" type="video/mp4">
-            <source src="Clap.ogg" type="video/ogg">
+            <source src="assets/Clap.mp4" type="video/mp4">
+            <source src="assets/Clap.ogg" type="video/ogg">
             Your browser does not support the video tag.
           </video>
 
           <a href="Bonus.html">
             <video width="320" height="240" autoplay>
-              <source src="Clap.mp4" type="video/mp4">
-              <source src="Clap.ogg" type="video/ogg">
+              <source src="assets/Clap.mp4" type="video/mp4">
+              <source src="assets/Clap.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video>
 
             <a href="Bonus.html">
               <video width="320" height="240" autoplay>
-                <source src="Clap.mp4" type="video/mp4">
-                <source src="Clap.ogg" type="video/ogg">
+                <source src="assets/Clap.mp4" type="video/mp4">
+                <source src="assets/Clap.ogg" type="video/ogg">
                 Your browser does not support the video tag.
               </video>
               <a href="Bonus.html">
                 <video width="320" height="240" autoplay>
-                  <source src="Clap.mp4" type="video/mp4">
-                  <source src="Clap.ogg" type="video/ogg">
+                  <source src="assets/Clap.mp4" type="video/mp4">
+                  <source src="assets/Clap.ogg" type="video/ogg">
                   Your browser does not support the video tag.
                 </video>
                 <video width="320" height="240" autoplay>
-                  <source src="Clap.mp4" type="video/mp4">
-                  <source src="Clap.ogg" type="video/ogg">
+                  <source src="assets/Clap.mp4" type="video/mp4">
+                  <source src="assets/Clap.ogg" type="video/ogg">
                   Your browser does not support the video tag.
                 </video>
