--- a/Lien/Cover.html
+++ b/Lien/Cover.html
@@ -12,7 +12,7 @@ img {
 
 
 <a href="X.html">
-  <img src="Bg.jpg" alt="Bg" style="wudth:50%">
+  <img src="assets/Bg.jpg" alt="Bg" style="wudth:50%">
 </a>
 
 
