--- a/Lien/Wrong11.html
+++ b/Lien/Wrong11.html
@@ -3,8 +3,8 @@
 <body>
 
 <video width="800" height="900" autoplay>
-  <source src="boom.mp4" type="video/mp4">
-  <source src="boom.ogg" type="video/ogg">
+  <source src="assets/boom.mp4" type="video/mp4">
+  <source src="assets/boom.ogg" type="video/ogg">
 
 
 </body>
