--- a/Lien/Wrong3.html
+++ b/Lien/Wrong3.html
@@ -4,7 +4,7 @@
 
 
 
-  <img src="Gif.gif" alt="Women"
+  <img src="assets/Gif.gif" alt="Women"
   style="width:600px;height:600px;border:0;">
 </a>
 
