--- a/Lien/Wrong4.html
+++ b/Lien/Wrong4.html
@@ -4,7 +4,7 @@
 
 
 
-  <img src="Skull.gif" alt="Skull"
+  <img src="assets/Skull.gif" alt="Skull"
   style="width:600px;height:600px;border:0;">
 </a>
 
