--- a/Lien/Wrong5.html
+++ b/Lien/Wrong5.html
@@ -4,7 +4,7 @@
 
 
 
-  <img src="Bear.gif" alt="Bear"
+  <img src="assets/Bear.gif" alt="Bear"
   style="width:600px;height:600px;border:0;">
 </a>
 
