--- a/Lien/gif.html
+++ b/Lien/gif.html
@@ -4,7 +4,7 @@
 
 <p>The GIF standard allows moving images.</p>
 
-  <img src="Crying.gif" alt="Crying"
+  <img src="assets/Crying.gif" alt="Crying"
   style="width:1000px;height:1000px;border:0;">
 </a>
 
