--- a/Lien/wrong2.html
+++ b/Lien/wrong2.html
@@ -4,7 +4,7 @@
 
 
 
-  <img src="Crying.gif" alt="Crying"
+  <img src="assets/Crying.gif" alt="Crying"
   style="width:600px;height:600px;border:0;">
 </a>
 
