--- a/Lien/Wrong10.html.html
+++ b/Lien/Wrong10.html.html
@@ -4,7 +4,7 @@
 
 
 
-  <img src="doritos.gif" alt="Skull"
+  <img src="assets/doritos.gif" alt="Skull"
   style="width:600px;height:600px;border:0;">
 </a>
 
