--- a/Lien/Wrong7.html
+++ b/Lien/Wrong7.html
@@ -3,8 +3,8 @@
 <body>
 
 <video width="638" height="522" autoplay>
-  <source src="Damn.mp4" type="video/mp4">
-  <source src="Damn.ogg" type="video/ogg">
+  <source src="assets/Damn.mp4" type="video/mp4">
+  <source src="assets/Damn.ogg" type="video/ogg">
 
 </video>
 
