--- a/Lien/Wrong8.html
+++ b/Lien/Wrong8.html
@@ -3,8 +3,8 @@
 <body>
 
 <video width="638" height="522" autoplay>
-  <source src="Boo.mp4" type="video/mp4">
-  <source src="Boo.ogg" type="video/ogg">
+  <source src="assets/Boo.mp4" type="video/mp4">
+  <source src="assets/Boo.ogg" type="video/ogg">
 
 </video>
 
