--- a/Lien/index.html
+++ b/Lien/index.html
@@ -23,30 +23,30 @@
 </a>
 
 <a href="Wrong4.html">
-  <img src="Blue.jpg" alt="Blue" style="width:200px;height:300px;border:0;">
+  <img src="assets/Blue.jpg" alt="Blue" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong5.html">
-  <img src="HD.jpg" alt="HD" style="width:200px;height:300px;border:0;">
+  <img src="assets/HD.jpg" alt="HD" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong6.html">
-  <img src="light green.jpg" alt="light green" style="width:200px;height:300px;border:0;">
+  <img src="assets/light green.jpg" alt="light green" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong7.html">
-  <img src="Purple.jpg" alt="Purple" style="width:200px;height:300px;border:0;">
+  <img src="assets/Purple.jpg" alt="Purple" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong8.html">
-  <img src="Pink.jpg" alt="Pink" style="width:200px;height:300px;border:0;">
+  <img src="assets/Pink.jpg" alt="Pink" style="width:200px;height:300px;border:0;">
 </a>
 
 <a href="Wrong10.html">
-  <img src="yell.jpg" alt="yell" style="width:200px;height:300px;border:0;">
+  <img src="assets/yell.jpg" alt="yell" style="width:200px;height:300px;border:0;">
 </a>
 <a href="Wrong11.html">
-  <img src="Gray.jpg" alt="Gray" style="width:200px;height:300px;border:0;">
+  <img src="assets/Gray.jpg" alt="Gray" style="width:200px;height:300px;border:0;">
 </a>
 
 
