add assets/ to vinh

--- a/Lien/index.html
+++ b/Lien/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<body style="background-image:url('E.jpg')"
+<body style="background-image:url('assets/E.jpg')"
 
 
 </a>
