--- a/Vinh/Ed SheeranVideo.html
+++ b/Vinh/Ed SheeranVideo.html
@@ -3,7 +3,7 @@
 <body>
 
 <video width="1199" height="700" autoplay>
-<source src="EdSheeran7secVideo.mp4" type="video/mp4">
+<source src="assets/EdSheeran7secVideo.mp4" type="video/mp4">
 
 </video>
 
