--- a/Vinh/Taylor SwiftVideo.html
+++ b/Vinh/Taylor SwiftVideo.html
@@ -4,7 +4,7 @@
 
 
 <video width="1199" height="700" autoplay>
-<source src="TaylorSwift7secVideo.mp4" type="video/mp4">
+<source src="assets/TaylorSwift7secVideo.mp4" type="video/mp4">
 
 </video>
 
