--- a/Vinh/Shayne WardVideo.html
+++ b/Vinh/Shayne WardVideo.html
@@ -4,7 +4,7 @@
 
 
 <video width="1199" height="700" autoplay>
-<source src="ShayneWard7secVideo.mp4" type="video/mp4">
+<source src="assets/ShayneWard7secVideo.mp4" type="video/mp4">
 
 </video>
 
