--- a/Vinh/index.html
+++ b/Vinh/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body background="NightSky.jpg">
+<body background="assets/NightSky.jpg">
 
 <center><h1 style="color:Azure;">Guess #Vinh's World</h1></center>
 
@@ -9,35 +9,35 @@
 </a>
 
 <a href="Shayne WardVideo.html">
-<img src="shayne_ward.jpg" alt="Shayne Ward" style="width:400px;height:130px;">
+<img src="assets/shayne_ward.jpg" alt="Shayne Ward" style="width:400px;height:130px;">
 </a>
 
 <a href="RihannaVideo.html">
-<img src="rihanna.jpg" alt="Rihanna" style="width:400px;height:130px;">
+<img src="assets/rihanna.jpg" alt="Rihanna" style="width:400px;height:130px;">
 </a>
 
 <a href="Meghan TrainorVideo.html">
-<img src="meghan_trainor.jpg" alt="Meghan Trainor" style="width:400px;height:130px;">
+<img src="assets/meghan_trainor.jpg" alt="Meghan Trainor" style="width:400px;height:130px;">
 </a>
 
 <a href="Justin BieberVideo.html">
-<img src="justin_bieber.jpg" alt="Justin Bieber" style="width:400px;height:130px;">
+<img src="assets/justin_bieber.jpg" alt="Justin Bieber" style="width:400px;height:130px;">
 </a>
 
 <a href="YirumaVideo.html">
-<img src="yiruma.jpg" alt="Yiruma" style="width:400px;height:130px;">
+<img src="assets/yiruma.jpg" alt="Yiruma" style="width:400px;height:130px;">
 </a>
 
 <a href="Jack JohnsonVideo.html">
-<img src="jack_johnson.jpg" alt="Jack Johnson" style="width:400px;height:130px;">
+<img src="assets/jack_johnson.jpg" alt="Jack Johnson" style="width:400px;height:130px;">
 </a>
 
 <a href="Taylor SwiftVideo.html">
-<img src="taylor_swift.jpg" alt="Taylor Swift" style="width:400px;height:130px;">
+<img src="assets/taylor_swift.jpg" alt="Taylor Swift" style="width:400px;height:130px;">
 </a>
 
 <a href="Brett YoungVideo.html">
-<img src="brett_young.jpg" alt="Brett Young" style="width:400px;height:130px;">
+<img src="assets/brett_young.jpg" alt="Brett Young" style="width:400px;height:130px;">
 </a>
 
 
