change lien index html

--- a/Lien/Wrong6.html
+++ b/Lien/Wrong6.html
@@ -4,9 +4,7 @@
 
 
 
-  <img src="assets/Blank.gif" alt="Oops.Try again"
-  style="width:600px;height:600px;border:0;">
-</a>
+<p> Oops. Try again. </p>
 
 </body>
 </html>
