--- a/Lien/purple snack.html
+++ b/Lien/purple snack.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 
-<p>
+<a href="index.html">
 <img src="assets/chili.jpg" alt="snack" width="900" height="900">
-<p><a href="https://www.walmart.com/ip/Doritos-reg-Spicy-Sweet-Chili-Flavored-Tortilla-Chips-9-75-oz-Bag/199281237?wmlspartner=wlpa&selectedSellerId=0&adid=22222222227058345760&wmlspartner=wmtlabs&wl0=&wl1=g&wl2=c&wl3=162071346604&wl4=aud-273067695102:pla-270049633883&wl5=9061323&wl6=&wl7=&wl8=&wl9=pla&wl10=8175035&wl11=online&wl12=199281237&wl13=&veh=sem/html/">Visit Walmart store to get your Doritos</a></p>
+<a/>
+<a href="https://www.walmart.com/ip/Doritos-reg-Spicy-Sweet-Chili-Flavored-Tortilla-Chips-9-75-oz-Bag/199281237?wmlspartner=wlpa&selectedSellerId=0&adid=22222222227058345760&wmlspartner=wmtlabs&wl0=&wl1=g&wl2=c&wl3=162071346604&wl4=aud-273067695102:pla-270049633883&wl5=9061323&wl6=&wl7=&wl8=&wl9=pla&wl10=8175035&wl11=online&wl12=199281237&wl13=&veh=sem/html/">Visit Walmart store to get your Doritos</a></p>
 
 </body>
 </html>
