--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="img_lights.jpg">
+    <a href="Vinh/index.html">
       <img src="gif4.gif" alt="gif4" width="600" height="400">
     </a>
   </div>
@@ -77,7 +77,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="img_mountains.jpg">
+    <a href="Lien/index.html">
       <img src="gif5.gif" alt="gif5" width="600" height="400">
     </a>
   </div>
@@ -86,7 +86,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="img_lights.jpg">
+    <a href="Lien/index.html">
       <img src="gif6.gif" alt="gif6" width="600" height="400">
     </a>
   </div>
@@ -94,7 +94,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="img_mountains.jpg">
+    <a href="Vinh/index.html">
       <img src="gif7.gif" alt="gif7" width="600" height="400">
     </a>
   </div>
