--- a/Lien/X.html
+++ b/Lien/X.html
@@ -15,7 +15,7 @@
 </a>
 
 <a href="Wrong.html">
-  <img src="assets/Dorito.jpg" alt="Original" style="width:300px;height:300px;border:0;">
+  <img src="assets/dorito.jpg" alt="Original" style="width:300px;height:300px;border:0;">
 </a>
 
 <a href="Wrong3.html">
