--- a/Lien/wrong2.html
+++ b/Lien/wrong2.html
@@ -3,10 +3,11 @@
 <body>
 
 
-
-  <img src="assets/Crying.gif" alt="Crying"
-  style="width:600px;height:600px;border:0;">
-</a>
+  
+ <center> <img src="assets/Crying.gif" alt="Crying"
+  style="width:1000px;height:1000px;border:0;">
+   </a> </center>
+  
 
 </body>
 </html>
