--- a/Lien/wrong2.html
+++ b/Lien/wrong2.html
@@ -3,10 +3,11 @@
 <body>
 
 
-  
- <center> <img src="assets/Crying.gif" alt="Crying"
+  <center>
+  <img src="assets/Crying.gif" alt="Crying"
   style="width:1000px;height:1000px;border:0;">
-   </a> </center>
+   </a> 
+  </center>
   
 
 </body>
