--- a/Lien/Wrong.html
+++ b/Lien/Wrong.html
@@ -3,10 +3,11 @@
 <body>
 
 
-
+<center>
   <img src="assets/X.gif" alt="X"
-  style="width:600px;height:600px;border:0;">
+  style="width:1000px;height:1000px;border:0;">
 </a>
+  </center>
 
 </body>
 </html>
