--- a/Lien/Wrong3.html
+++ b/Lien/Wrong3.html
@@ -3,10 +3,10 @@
 <body>
 
 
-
+<center>
   <img src="assets/Gif.gif" alt="Women"
-  style="width:600px;height:600px;border:0;">
+  style="width:1000px;height:1000px;border:0;">
 </a>
-
+  </center>
 </body>
 </html>
