--- a/Lien/Wrong7.html
+++ b/Lien/Wrong7.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<video width="638" height="522" autoplay>
+<center>
+<video width="900" height="850" autoplay>
   <source src="assets/Damn.mp4" type="video/mp4">
   <source src="assets/Damn.ogg" type="video/ogg">
-
+  </center>
 </video>
 
 </body>
