--- a/Lien/Wrong11.html
+++ b/Lien/Wrong11.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<video width="800" height="900" autoplay>
+<center>
+<video width="1000" height="1000" autoplay>
   <source src="assets/boom.mp4" type="video/mp4">
   <source src="assets/boom.ogg" type="video/ogg">
-
+  </center>
 
 </body>
 </html>
