--- a/Lien/X.html
+++ b/Lien/X.html
@@ -3,7 +3,7 @@
 <body>
 <body style="background-image:url('assets/E.jpg')"
 
-
+<center>
 </a>
 
 <a href="wrong2.html">
@@ -48,7 +48,7 @@
 <a href="Wrong11.html">
   <img src="assets/Gray.jpg" alt="Gray" style="width:200px;height:300px;border:0;">
 </a>
-
+  </center>
 
 
 
