--- a/Lien/Correct.html
+++ b/Lien/Correct.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<p>The GIF standard allows moving images.</p>
+  <center>
 
   <img src="assets/Snack.gif" alt="Snack"
   style="width:1000px;height:1000px;border:0;">
+   
 </a>
+  </center>
 
 </body>
 </html>
