--- a/Lien/X.html
+++ b/Lien/X.html
@@ -48,6 +48,23 @@
 <a href="Wrong11.html">
   <img src="assets/Gray.jpg" alt="Gray" style="width:250px;height:350px;border:0;">
 </a>
+  
+  <a href="Wrong5.html">
+  <img src="assets/HD.jpg" alt="HD" style="width:250px;height:350px;border:0;">
+</a>
+  
+  <a href="Wrong.html">
+  <img src="assets/dorito.jpg" alt="Original" style="width:250px;height:350px;border:0;">
+</a>
+  
+  <a href="Wrong8.html">
+  <img src="assets/Pink.jpg" alt="Pink" style="width:250px;height:350px;border:0;">
+</a>
+  
+  <a href="wrong2.html">
+  <img src="assets/Green.jpg" alt="Green" style="width:250px;height:350px;border:0;">
+</a>
+
   </center>
 
 
