--- a/Lien/Correct.html
+++ b/Lien/Correct.html
@@ -2,7 +2,8 @@
 <html>
 <body>
   <center>
-
+<a href="Bonus.html">
+ 
   <img src="assets/Snack.gif" alt="Snack"
   style="width:1000px;height:1000px;border:0;">
    
