--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -2,10 +2,11 @@
 <html>
 <body>
 
-
+<center>
 <p>Click on any bags of Doritos to go to a new page and read more abot the topic:</p>
 
 <img src="assets/doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
+  
 
 <map name="workmap">
   <area shape="rect" coords="156,132,85,197" alt="Sun" href="blue.html">
@@ -14,6 +15,7 @@
 </map>
 
 </map>
+      </center>                                                                             
 
 </body>
 </html>
