--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -3,7 +3,8 @@
 <body>
 
 <center>
-<p>Click on any bags of Doritos to go to a new page and read more abot the topic:</p>
+  <h1 style="font-size:60px;">Click on any bags of Doritos to go to a new page and read more abot the topic</h1>
+
 
 <img src="assets/doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
   
