--- a/Wen/index.html
+++ b/Wen/index.html
@@ -3,20 +3,17 @@
   <meta charset="UTF-8">
 
   <style> body {padding: 0; margin: 0;} </style>
+<title>GroupSelfies</title>
+
+    <script src="libraries/p5.js" type="text/javascript"></script>
+    <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
+    <script src="bubble.js" type="text/javascript"></script>
 
 </head>
-
 <body>
-
-    <p></p>
-
-    <script language="javascript" type="text/javascript" src="../p5.js"></script>
-  <!-- uncomment lines below to include extra p5 libraries -->
-    <script language="javascript" src="../addons/p5.dom.js"></script>
-    <script language="javascript" src="../addons/p5.sound.js"></script>
-    <script language="javascript" type="text/javascript" src="sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="bubble.js"></script>
-      <!-- this line removes any default padding and style. you might only need one of these values set. -->
-    <style>body {padding: 10; margin: 10; background-color: beige;}</style>
+        <p></p>
+    <style>body {padding: 10; margin: 10; background-color: white;}</style>
 </body>
 </html>
