chenge main index html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="London Time.html">
+    <a href="Wen/index.html">
       <img src="gif8.gif" alt="gif8" width="600" height="400">
     </a>
   </div>
@@ -111,7 +111,7 @@ div.gallery img {
 
 <div class="responsive">
   <div class="gallery">
-    <a href="img_mountains.jpg">
+    <a href="Wen/index.html">
       <img src="gif9.gif" alt="gif9" width="600" height="400">
     </a>
   </div>
