--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
-<html>
-<body>
+  <html>
+  <head>
+  <style>
+  img:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  </style>
+  </head>
+  <body>
+    <img src="doritosss.jpeg" width="400" height="400">
 
 <center>
   <h1 style="font-size:60px;">Click on any bags of Doritos to go to a new page and read more about the topic</h1>
