--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -6,16 +6,16 @@
   <h1 style="font-size:60px;">Click on any bags of Doritos to go to a new page and read more abot the topic</h1>
 
 
-<img src="doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
+<img src="doritosss.jpg" alt="snack" usemap="#workmap" width="400" height="400">
 
 <map name="workmap">
   <area shape="rect" coords="156,132,85,197" alt="Sun" href="blue.html">
   <area shape="rect" coords="179,291,325,176" alt="Mercury" href="red snack.html">
   <area shape="circle" coords=197,300,130,250" alt="Venus" href="purple snack.html">
-                                                                                   
-   </center>                                                                               
-  
-  
+
+   </center>
+
+
 
 
 
