--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -29,18 +29,16 @@
   <h1 style="font-size:60px;">Click on any bags of Doritos to go to a new page and read more about the topic</h1>
 
 
-<<<<<<< HEAD
-<img src="doritosss.jpg" alt="snack" usemap="#workmap" width="400" height="400">
-=======
+<img src="doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
 <img src="assets/doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
   
->>>>>>> 729687c45647988faebf9a5882da8cedbffb4963
+
 
 <map name="workmap">
   <area shape="rect" coords="156,132,85,197" alt="Sun" href="blue.html">
   <area shape="rect" coords="179,291,325,176" alt="Mercury" href="red snack.html">
   <area shape="circle" coords=197,300,130,250" alt="Venus" href="purple snack.html">
-<<<<<<< HEAD
+
 
    </center>
 
@@ -48,10 +46,8 @@
 
 
 
-=======
->>>>>>> 729687c45647988faebf9a5882da8cedbffb4963
+
 </map>
-</map>
-      </center>                                                                             
+                                                                                
 </body>
 </html>
