change index to ..index

--- a/Vinh/Jack JohnsonVideo.html
+++ b/Vinh/Jack JohnsonVideo.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-
+<a href="../index.html">
 <video width="1199" height="700" autoplay>
 <source src="assets/JackJohnson7secVideo.mp4" type="video/mp4">
 
