--- a/Wen/index.html
+++ b/Wen/index.html
@@ -2,7 +2,8 @@
 <head>
   <meta charset="UTF-8">
 
-  <style> body {padding: 0; margin: 0;} </style>
+<a href="../index.html">
+  
 <title>GroupSelfies</title>
 
     <script src="libraries/p5.js" type="text/javascript"></script>
