--- a/Lien/Bonus.html
+++ b/Lien/Bonus.html
@@ -23,15 +23,15 @@
   </style>
   </head>
   <body>
-    
+
 
 <center>
   <h1 style="font-size:60px;">Click on any bags of Doritos to go to a new page and read more about the topic</h1>
 
 
-<img src="doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
-<img src="assets/doritosss.jpeg" alt="snack" usemap="#workmap" width="400" height="400">
-  
+<img src="assets/doritosss.jpg" alt="snack" usemap="#workmap" width="400" height="400">
+<img src="assets/doritosss.jpg" alt="snack" usemap="#workmap" width="400" height="400">
+
 
 
 <map name="workmap">
@@ -48,6 +48,6 @@
 
 
 </map>
-                                                                                
+
 </body>
 </html>
