--- a/Wen/index.html
+++ b/Wen/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
 
 <a href="../index.html">
-  
+
 <title>GroupSelfies</title>
 
     <script src="libraries/p5.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-        <p></p>
+        <p>Can you find my selfie?</p>
     <style>body {padding: 10; margin: 10; background-color: white;}</style>
 </body>
 </html>
