--- a/Wen/index.html
+++ b/Wen/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta charset="UTF-8">
 
-<a href="../index.html">
 
 <title>GroupSelfies</title>
 
@@ -14,7 +13,10 @@
 
 </head>
 <body>
-        <p>Can you find my selfie?</p>
+
+        <p align="center"><a href="../index.html">Can you find my selfie?</a>
+        </p>
+  
     <style>body {padding: 10; margin: 10; background-color: white;}</style>
 </body>
 </html>
