add heading index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ div.gallery img {
 </head>
 <body>
 
+<h1 align="center">Welcome to LVW's World!</h1>
+
 
 <div class="responsive">
   <div class="gallery">
